@@ -1,3 +1,7 @@
 SUBDIRS = demo benchmarks
 
 ACLOCAL_AMFLAGS = -I build-aux
+
+EXTRA_DIST = \
+	build-aux/genbench.sh \
+	build-aux/benchmarks.mk
