@@ -24,6 +24,7 @@ AC_PROG_EGREP
 AC_PROG_SED
 AC_PROG_CC
 AC_PROG_RANLIB
+AC_CHECK_PROGS([BASH], [bash sh])
 
 SLC_PATH_LOCAL([../slc])
 AC_WITH_SLC
